# python

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  ALL_DOCS_STRUCTURE_FIX_COMPLETE_2025_10_26.md  ALL_STRUCTURE_FIXES_COMPLETE_2025_10_26.md  ARCHITECTURE.md  BINARY_SEARCH_ACHIEVEMENT_2025_10_26.md  CHANGELOG.md  CLEANUP_REPORT_2025.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY_2025.md  COMPREHENSIVE_PROGRESS_REPORT_2025_10_25.md  CONTENT_ENHANCEMENT_COMPLETE_2025.md  CONTINUED_DOCS_PROGRESS_2025_10_28.md  CONTRIBUTING.md  CREATIONAL_PATTERNS_MILESTONE_REPORT.md  DAILY_ACHIEVEMENT_2025_10_27.md  DEEP_ENHANCEMENT_COMPLETE_2025.md  DESIGN_PATTERNS_PROGRESS_REPORT.md  DOCS_CREATION_PROGRESS_2025_10_28.md  DOCUMENTATION_HUB.md  DOCUMENTATION_STRUCTURE_STANDARD.md  ECOSYSTEM_BREAKTHROUGH_2025_10_28.md  ECOSYSTEM_FINAL_SPRINT_2025_10_28.md  ECOSYSTEM_HALF_COMPLETE_2025_10_28.md  ECOSYSTEM_PHASE1_COMPLETE_2025_10_28.md  ECOSYSTEM_PHASE2_PROGRESS_2025_10_28.md  ECOSYSTEM_RESTRUCTURE_COMPLETE_2025_10_28.md  ECOSYSTEM_RESTRUCTURE_PLAN_2025_10_28.md  EXECUTION_GUIDE.md  FACTORY_METHOD_COMPLETION_REPORT.md  FAST_PROGRESS_REPORT_2025_10_26.md  FINAL_ACHIEVEMENT_2025_10_26.md  FINAL_CHAPTER_COMPLETE_2025_10_28.md  FINAL_COMPLETION_REPORT_2025_10_24.md  FINAL_COMPLETION_REPORT_2025_10_28.md  FINAL_DAY_SUMMARY_2025_10_26.md  FINAL_ECOSYSTEM_STATUS_2025_10_28.md  (+88 more)
.github/workflows/: fastapi_min_ci.yml  python-ci.yml
02-design-patterns/01-creational/: CREATIONAL_PATTERNS_SUMMARY.md
05-formal-methods/abstract-interpretation/: README.md  abstract_interp.py  abstract_interpretation.py
05-formal-methods/dependent-types/: README.md  dependent_types.py
05-formal-methods/formal-verification/: README.md  formal_verification.py
05-formal-methods/model-checking/: README.md  model_checking.py
05-formal-methods/program-analysis/: README.md  program_analysis.py
05-formal-methods/proof-assistants/: README.md  proof_assistants.py
05-formal-methods/refinement-types/: README.md  refinement_types.py
05-formal-methods/symbolic-execution/: README.md  symbolic_exec.py  symbolic_execution.py
05-formal-methods/theorem-proving/: README.md  theorem_proving.py
05-formal-methods/type-theory/: README.md  type_theory.py
06-software-engineering/api-design/: README.md  api_design.py
06-software-engineering/clean-architecture/: README.md  clean_arch.py  clean_architecture.py
06-software-engineering/code-review/: README.md  code_review.py
06-software-engineering/cqrs/: README.md  cqrs.py
06-software-engineering/domain-driven-design/: README.md  ddd.py  domain_driven_design.py
06-software-engineering/event-sourcing/: README.md  event_sourcing.py
06-software-engineering/microservices-patterns/: README.md  microservices.py  microservices_patterns.py
06-software-engineering/project-management/: README.md  project_management.py  project_mgmt.py
06-software-engineering/refactoring/: README.md  refactoring.py
06-software-engineering/version-control/: README.md  version_control.py
07-ecosystem/best-practices/: README.md  best_practices.py
07-ecosystem/community-tools/: README.md  community_tools.py
07-ecosystem/deployment-strategies/: README.md  deployment.py  deployment_strategies.py
07-ecosystem/mypy-typing/: README.md  mypy_typing.py
07-ecosystem/pipenv/: README.md  (+1 more)
docs/: PYTHON_313_COMPLETION_REPORT.md  PYTHON_CORE_COMPLETION_2025.md  PYTHON_CORE_FINAL_2025.md  PYTHON_CORE_ROUND2_2025.md  PYTHON_CORE_ROUND3_2025.md  README.md  README_FINAL.md  auto_content_filler.py  batch_generate_code_template.py  batch_generate_knowledge_checklist.py  batch_generate_module_readme.py  check_and_fix_links.py  create_python_templates.py  execution_guide.md  extend_to_other_languages.py  final_complete_system.py  generate_code_examples.py  generate_contributing_md.py  generate_directory_tree.py  generate_knowledge_checklist.py  generate_mindmap.py  github_actions_workflow.yml  main.py  migrate_python_content.py  migration_monitor.py  migration_summary.md  periodic_content_health_check.py  pre_commit_check.py  python_content_analyzer.py  python_ecosystem_backup.py  python_ecosystem_complete_system.py  python_ecosystem_enhanced_organizer.py  python_ecosystem_guide.md  python_ecosystem_launcher.py  python_ecosystem_organizer.py  python_ecosystem_summary.json  python_ecosystem_usage_guide.md  python_ecosystem_workflow.py  python_knowledge_system.md  python_migration_complete_guide.md  (+8 more)
examples/: 01_python312_new_features.py  02_python313_features.py  03_modern_type_system.py  04_fastapi_modern_web.py  05_polars_modern_data.py
python/: 00-索引-目录.md  README.md  SUMMARY.md  generate_python_ecosystem_path_list.py  python_ecosystem_onekey_workflow.py  python_ecosystem_path_autofix.py  python_ecosystem_path_checker.py  python_ecosystem_path_prechecker.py  项目完成总结.md
python/01-语言与生态/templates/modern-project-2025/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
python/01-语言与生态/templates/modern-project-2025/.github/workflows/: ci.yml
python/01-语言与生态/templates/modern-project-2025/src/my_modern_project/: __init__.py  core.py
python/01-语言与生态/templates/modern-project-2025/tests/: conftest.py  test_core.py
python/02-测试与质量/examples/minimal_project/: README.md  pyproject.toml
python/02-测试与质量/examples/minimal_project/src/example/: __init__.py  core.py
python/02-测试与质量/examples/minimal_project/tests/: test_core.py
python/03-工程与交付/examples/minimal_build/: README.md  pyproject.toml
python/05-Web开发/examples/fastapi_min/: .dockerignore  Dockerfile  ENV_EXAMPLE  README.md  app.py  bench.sh  cli_demo.py  db.py  docker-compose.yml  jwt_auth.py  metrics.py  nginx.conf  prometheus.yml  pyproject.toml  routers.py  scheduler.py  settings.py
python/05-Web开发/examples/fastapi_min/tests/: test_app.py
python/06-数据科学/examples/pandas_sklearn_min/: README.md  grid_search.py  main.py  predict.py  pyproject.toml
scripts/: benchmark.py  health_check.py  init_project.py  run_examples.sh  setup_dev_env.sh
tech_radar_system/: README.md  requirements.txt
(+1177 files in other folders)
