[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-project"
version = "0.1.0"
description = "Minimal example for pytest + ruff + mypy"
authors = [{name = "Example", email = "example@example.com"}]
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B","UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
